syntax = "proto3";
option go_package = "pkg/gen;rmcp";
message GameStatus {
  uint32 current_round = 1;
  uint32 total_rounds = 2;
  uint32 red_score = 3;
  uint32 blue_score = 4;
  uint32 current_stage = 5;
  int32 stage_countdown_sec = 6;
  int32 stage_elapsed_sec = 7;
  bool is_paused = 8;
}